[package]
name = "convey"
version = "0.1.0"
authors = ["Pascal Hertleif <killercup@gmail.com>"]
description = "A Rust create for outputting information and log messages for humans and machines"
license = "Apache-2.0 OR MIT"
readme = "README.md"
repository = "https://github.com/killercup/convey"

[workspace]
members = [
    "convey_derive"
]

[dependencies]
termcolor = "1.0.4"
serde = "1.0.79"
serde_json = "1.0.31"
failure_derive = "0.1.2"
failure = "0.1.2"
serde_derive = "1.0.79"
crossbeam-channel = "0.2.6"

[dev-dependencies]
proptest = "0.8.7"
assert_fs = "0.9.0"
predicates = "0.9.0"
convey_derive = { version = "0.1", path = "convey_derive" }
rand = "0.5.5"
