[package]
name = "convey"
version = "0.2.0"
authors = ["Pascal Hertleif <killercup@gmail.com>"]
description = "A Rust create for outputting information and log messages for humans and machines"
license = "Apache-2.0 OR MIT"
readme = "README.md"
repository = "https://github.com/killercup/convey"
edition = "2018"

[workspace]
members = [
    "convey_derive"
]

[features]
default = ["log"]

[[example]]
name = "logging"
path = "examples/logging.rs"
required-features = ["log"]

[dependencies]
termcolor = "1.0.4"
serde = "1.0.79"
serde_json = "1.0.31"
failure_derive = "0.1.2"
failure = "0.1.2"
serde_derive = "1.0.79"
crossbeam-channel = "0.3.4"
log = { version = "0.4.6", features = ["std", "serde"], optional = true }

[dev-dependencies]
proptest = "0.8.7"
assert_fs = "0.10.0"
predicates = "1.0.0"
convey_derive = { version = "0.2", path = "convey_derive" }
rand = "0.6.1"
structopt = "0.2"
