[package]
name = "convey_derive"
version = "0.1.0"
authors = ["Katharina Fey <kookie@spacekookie.de>", "Pascal Hertleif <killercup@gmail.com>"]
repository = "https://github.com/killercup/convey"
license = "Apache-2.0 OR MIT"

[lib]
proc-macro = true

[dependencies]
syn = "0.15"
quote = "0.6"

[dev-dependencies]
convey = { version = "0.1", path = ".." }
serde = "1.0.79"
serde_derive = "1.0.79"
