[package]
name = "convey_derive"
version = "0.2.0"
authors = ["Katharina Fey <kookie@spacekookie.de>", "Pascal Hertleif <killercup@gmail.com>"]
description = "A Rust create for outputting information and log messages for humans and machines"
license = "Apache-2.0 OR MIT"
repository = "https://github.com/killercup/convey"

[lib]
proc-macro = true

[dependencies]
syn = "0.15"
quote = "0.6"

[dev-dependencies]
convey = { version = "0.2", path = ".." }
serde = "1.0.79"
serde_derive = "1.0.79"
